unpackaged/main/default/objects/fferpcore__ProcessUserGroup__c/fferpcore__ProcessUserGroup__c.object-meta.xml
<CustomObject>
    <label>Process User Group</label>
    <nameField>
        <displayFormat>PUG-{000000}</displayFormat>
        <label>Process User Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>