unpackaged/main/default/objects/fferpcore__ProcessUserGroup__c/fields/fferpcore__TotalNumberOfPending__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfPending__c</fullName>
    <description>Total Number of Logs which have the status of Pending.</description>
    <label>Total Number of Pending</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>