unpackaged/main/default/objects/fferpcore__ProcessUserGroup__c/fields/fferpcore__TotalNumberOfSuccesses__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TotalNumberOfSuccesses__c</fullName>
    <description>Total Number of Logs which have the status of OK.</description>
    <label>Total Number of Successes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>