unpackaged/main/default/objects/fferpcore__ProcessUserGroup__c/fields/fferpcore__UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UniqueIdentifier__c</fullName>
    <description>Unique Identifier for the Process User Group.</description>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>