unpackaged/main/default/objects/fferpcore__ProcessUserGroup__c/fields/fferpcore__User__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that owns the Process User Group.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Process_User_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>